docker/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rsc-gateway
  labels:
    app.kubernetes.io/name: rsc-gateway
