docker/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsc-gateway
  namespace: rsc-gateway
  labels:
    app.kubernetes.io/name: rsc-gateway
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rsc-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
